Added Jetty 12 compatibility tests